objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support process 1</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agent__c</fullName>
        <label>Agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent1</fullName>
                </value>
                <value>
                    <fullName>Agent2</fullName>
                </value>
                <value>
                    <fullName>Agent3</fullName>
                </value>
                <value>
                    <fullName>Agent4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bad_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Feature__c</fullName>
        <description>Copado features.</description>
        <label>Case Feature</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Reason_Custom__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Git Snapshot</fullName>
                </value>
                <value>
                    <fullName>Org Credential</fullName>
                </value>
                <value>
                    <fullName>Org Differences</fullName>
                </value>
                <value>
                    <fullName>Git Repository</fullName>
                </value>
                <value>
                    <fullName>User Story</fullName>
                </value>
                <value>
                    <fullName>Promotions</fullName>
                </value>
                <value>
                    <fullName>Deployment Flows</fullName>
                </value>
                <value>
                    <fullName>Snapshot Differences</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Sprints</fullName>
                </value>
                <value>
                    <fullName>User Stories</fullName>
                </value>
                <value>
                    <fullName>Continuous Integration</fullName>
                </value>
                <value>
                    <fullName>Pre/Post Build Automation</fullName>
                </value>
                <value>
                    <fullName>Permissions &amp; Notifications</fullName>
                </value>
                <value>
                    <fullName>Branch Management Permissions</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Permissions</fullName>
                </value>
                <value>
                    <fullName>Authentication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Reason_Custom__c</fullName>
        <label>Case Reason Custom</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Core</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Continuous Integration</fullName>
                </value>
                <value>
                    <fullName>Branch Management</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Licenses</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Cancelation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_SHI__c</fullName>
        <label>Case SHI</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Check1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elisa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elisa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Feedback__c</fullName>
        <label>Escalation Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Now_Time__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Now Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Number__c</fullName>
        <label>Required Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHI_Test__c</fullName>
        <label>SHI Test</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spring17Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spring17Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Urgent</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Quite Urgent</fullName>
                </value>
                <value>
                    <fullName>Really Urgent</fullName>
                </value>
                <value>
                    <fullName>Extremely Urgent</fullName>
                    <isActive>false</isActive>
                    <label>Extremely Urgent</label>
                </value>
                <value>
                    <fullName>NewValue</fullName>
                    <isActive>false</isActive>
                    <label>NewValue</label>
                </value>
                <value>
                    <fullName>Test Fix</fullName>
                    <isActive>false</isActive>
                    <label>Test Fix</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>profile_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>profile test</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Spam_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Spam Cases</label>
        <queue>Spam_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Super_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Super Cases</label>
        <language>en_US</language>
        <queue>Super_Cases</queue>
    </listViews>
    <listViews>
        <fullName>Super_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Super Cases</label>
        <queue>Super_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>prod_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>prod queue</label>
        <queue>prod_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Case_Layout1</fullName>
        <active>true</active>
        <businessProcess>Support process 1</businessProcess>
        <label>Case Layout1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_2</fullName>
        <active>true</active>
        <businessProcess>Support process 1</businessProcess>
        <label>Record type 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_3</fullName>
        <active>true</active>
        <businessProcess>Support process 1</businessProcess>
        <label>Record type 3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_4</fullName>
        <active>true</active>
        <businessProcess>Support process 1</businessProcess>
        <label>Record type 4</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Case</fullName>
        <active>true</active>
        <businessProcess>Sales Process</businessProcess>
        <label>Sales Case</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>